--- a/lib/Web/HTML/Serializer.pod
+++ b/lib/Web/HTML/Serializer.pod
@@ -58,25 +58,23 @@ C<inner_html> attribute for DOM C<Document> and C<Element> nodes.
 
 Return a new instance of the serializer.
 
-=item $serializer->onerror ($onerror)
+=item $boolean = $serializer->scripting
 
-Set the error handler.  It must be a reference to C<CODE>, which will
-be invoked when an error occurs.  If the algorithm is required to
-raise an C<InvalidStateError> exception, i.e. if the algorithm is
-faced to a C<Node> whose type is different from any of ones supported
-by the algorithm, the C<CODE> is invoked with that C<Node> as an
-argument.  It is expected for the C<CODE> to raise an exception.  If
-no exception is raised, the C<Node> is ignored for the purpose of the
-algorithm.
+=item $serializer->scripting ($boolean)
 
-If no error handler is explicitly specified, an empty C<CODE> is used
-as default (i.e. do nothing).
+Get or set scripting is enabled (true) or disabled (false).  This flag
+affects how HTML C<noscript> element is serialized.  By default
+scripting is disabled.  (In Web browsers, scripting is enabled by
+default.)
 
-=item SCALARREF = $serializer->get_inner_html ($node)
+=item $scalarref = $serializer->get_inner_html ($node)
 
 Serialize the specified node using the HTML fragment serialization
 algorithm.  The result is returned as a reference to the character
 string.
+
+The argument must be a DOM C<Document>, C<Document>, or
+C<DocumentFragment>.
 
 =back
 
@@ -103,7 +101,7 @@ Wakaba <wakaba@suikawiki.org>.
 
 =head1 LICENSE
 
-Copyright 2007-2013 Wakaba <wakaba@suikawiki.org>.
+Copyright 2007-2014 Wakaba <wakaba@suikawiki.org>.
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
