--- a/lib/Web/XML/Serializer.pod
+++ b/lib/Web/XML/Serializer.pod
@@ -58,29 +58,14 @@ C<inner_html> attribute for DOM C<Document> and C<Element> nodes.
 
 Return a new instance of the serializer.
 
-=item $serializer->onerror ($onerror)
-
-Set the error handler.  It must be a reference to C<CODE>, which will
-be invoked when an error occurs.  If the algorithm is required to
-raise an C<InvalidStateError> exception, i.e. if the algorithm is
-faced to a C<Node> whose type is different from any of ones supported
-by the algorithm, the C<CODE> is invoked with that C<Node> as an
-argument.  It is expected for the C<CODE> to raise an exception.  If
-no exception is raised, the C<Node> is ignored for the purpose of the
-algorithm.
-
-In addition, future version of the module might invoke the code
-reference when a C<SyntaxError> exception should be thrown according
-to the HTML standard.
-
-If no error handler is explicitly specified, an empty C<CODE> is used
-as default (i.e. do nothing).
-
-=item SCALARREF = $serializer->get_inner_html ($node)
+=item $scalarref = $serializer->get_inner_html ($node)
 
 Serialize the specified node using the XML fragment serialization
 algorithm.  The result is returned as a reference to the character
 string.
+
+The argument must be a DOM C<Document>, C<Document>, or
+C<DocumentFragment>.
 
 =back
 
