--- a/lib/Web/XML/Parser.pod
+++ b/lib/Web/XML/Parser.pod
@@ -102,7 +102,7 @@ for details of source location annotations using DOM3 user data.
 
 =over 4
 
-=item [XML]
+=item XML
 
 XML 1.0 <http://www.w3.org/TR/xml/>.
 
@@ -125,7 +125,7 @@ XXX XML-DOM mapping is not fully defined.
 The C<xmlns> attribute in an XML document MUST be mapped to an C<Attr>
 object whose namespace is the XMLNS namespace and name is C<xmlns>.
 
-=item [HTML]
+=item HTML
 
 HTML Living Standard - Parsing XHTML documents
 <http://www.whatwg.org/specs/web-apps/current-work/#parsing-xhtml-documents>.
@@ -134,19 +134,19 @@ The XML fragment parsing algorithm must return the children of the
 template content of the root element of the resulting C<Document>, in
 tree order, if the /context/ element is an HTML C<template> element.
 
-=item [XMLCC]
+=item XMLCC
 
 manakai's XML Conformance Checking
 <http://suika.suikawiki.org/www/markup/xml/xmlcc/xmlcc-work>.
 
 XXX This document is out of date.
 
-=item [DTDEF]
+=item DTDEF
 
 DOM Document Type Definition Module
 <http://suika.suikawiki.org/www/markup/xml/domdtdef/domdtdef-work>.
 
-=item [MANAKAI]
+=item MANAKAI
 
 manakai DOM Extensions
 <http://suika.suikawiki.org/~wakaba/wiki/sw/n/manakai%20DOM%20Extensions>.
@@ -159,7 +159,7 @@ Wakaba <wakaba@suikawiki.org>.
 
 =head1 LICENSE
 
-Copyright 2007-2013 Wakaba <wakaba@suikawiki.org>.
+Copyright 2007-2014 Wakaba <wakaba@suikawiki.org>.
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
