--- a/lib/Web/HTML/Validator.pod
+++ b/lib/Web/HTML/Validator.pod
@@ -282,6 +282,23 @@ CSS Style Attributes <http://dev.w3.org/csswg/css-style-attr/>.
 CSS Syntax
 <http://dev.w3.org/csswg/css-syntax/#parse-a-list-of-declarations>.
 
+=item SCHEMAORG
+
+Schema.org <http://schema.org/>.
+
+=item DATAVOCAB
+
+data-vocabulary.org <http://www.data-vocabulary.org/>.
+
+Structured data
+<https://support.google.com/webmasters/topic/2643152?ref_topic=30163>.
+
+Definitions are clarified as follows: If the value is defined as an
+"ISO date", it MUST be a valid date string or a valid global date and
+time string.  If the value is defined as an "ISO duration", it MUST be
+a valid vevent duration string.  If the value is defined as a URL,
+image, or link, it MUST be an absolute URL.
+
 =item MANAKAI
 
 manakai DOM Extensions
