--- a/lib/Web/HTML/Validator.pod
+++ b/lib/Web/HTML/Validator.pod
@@ -286,6 +286,15 @@ CSS Syntax
 
 Schema.org <http://schema.org/>.
 
+Definitions are clarified as follows: An item value whose data type is
+<http://schema.org/Integer> MUST be a valid integer.  An item value
+whose data type is <http://schema.org/DateTime> MUST be a valid global
+date and time string or a valid local date and time string.  An item
+value whose data type is <http://schema.org/Date> MUST be a valid date
+string.  An item value whose data type is <http://schema.org/Time>
+MUST be a valid time string.  An item value whose data type is
+<http://schema.org/URL> MUST be an absolute URL.
+
 =item DATAVOCAB
 
 data-vocabulary.org <http://www.data-vocabulary.org/>.
