--- a/lib/Web/XPath/FunctionLibrary.pod
+++ b/lib/Web/XPath/FunctionLibrary.pod
@@ -184,7 +184,7 @@ Wakaba <wakaba@suikawiki.org>.
 
 =head1 LICENSE
 
-Copyright 2013 Wakaba <wakaba@suikawiki.org>.
+Copyright 2013-2014 Wakaba <wakaba@suikawiki.org>.
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
