Implemented Atom history (RFC 5005)

--- a/lib/Web/HTML/Validator.pod
+++ b/lib/Web/HTML/Validator.pod
@@ -333,8 +333,12 @@ interpreted as the second column of the same row:
 Comments and processing instructions MAY be inserted anywhere in an
 Atom threading extension element.
 
-Elements C<thr:in-reply-to> and C<thr:total> MAY be used as children
-of C<atom:entry> elements.
+=item ATOMHISTORY
+
+Feed Paging and Archiving <https://tools.ietf.org/html/rfc5005>.
+
+Elements C<fh:complete> and C<fh:archive> MAY be used as child of an
+C<atom:feed> element at most once, respectively.
 
 =item ATOMPUB
 
